--- a/app/src/main/res/layout/activity_splash2.xml
+++ b/app/src/main/res/layout/activity_splash2.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context="cn.hikyson.rocket.sample.SplashActivity">
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="test"
